[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player/PlayerOld.gd" type="Script" id=1]
[ext_resource path="res://Scenes/weapons/shotgun/shotgun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/assets/crosshair.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/scripts/UX.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player/assets/hit.ogg" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[node name="Player" type="KinematicBody" groups=[
"player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69468, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="slope_ray" type="RayCast" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.514955, 0.516907 )
enabled = true
cast_to = Vector3( 0, 0, 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="head"]
far = 500.0
script = ExtResource( 5 )

[node name="shoot_cast" type="RayCast" parent="head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="weapon_node" type="Spatial" parent="head/Camera"]

[node name="shotgun" parent="head/Camera/weapon_node" instance=ExtResource( 2 )]
transform = Transform( -0.025, 0, -3.7749e-09, 0, 0.025, 0, 3.7749e-09, 0, -0.025, 0.323298, -0.305337, -1.29288 )

[node name="UX" type="Control" parent="head/Camera"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xhair" type="TextureRect" parent="head/Camera/UX"]
margin_left = 12.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp1" type="ColorRect" parent="head/Camera/UX"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.705882, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp2" type="ColorRect" parent="head/Camera/UX"]
margin_left = 48.2658
margin_right = 88.2658
margin_bottom = 41.1225
color = Color( 0.705882, 0, 0, 1 )

[node name="hp3" type="ColorRect" parent="head/Camera/UX"]
margin_left = 96.5317
margin_right = 136.532
margin_bottom = 40.0
color = Color( 0.705882, 0, 0, 1 )

[node name="timer" type="Label" parent="head/Camera/UX"]
margin_left = 561.231
margin_right = 601.231
margin_bottom = 14.0
rect_scale = Vector2( 2.29407, 2.5875 )
text = "Time: "

[node name="timer_data" type="Label" parent="head/Camera/UX"]
margin_left = 644.293
margin_top = 3.36739
margin_right = 684.293
margin_bottom = 17.3674
rect_scale = Vector2( 2.29407, 2.5875 )
text = "0000 "

[node name="hitsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
